# cotd

./: .coverage  .cvsignore  .dockerignore  .env.docker  .env.example  .env.sample  .gitignore  ALPINE_INTEGRATION.md  CALENDAR_VIEW_REMOVAL.md  CHANGELOG.md  DUPLICATE_BUTTON_FIX.md  Dockerfile  ENV_CONFIGURATION_GUIDE.md  MULTITENANT_SUMMARY.md  README.md  TEAM_OVERVIEW_DELETE.md  UI_README.md  VACATION_OVERVIEW_REFRESH.md  WEIGHTED_ALGORITHM.md  add_auth_columns_migration.py  add_auth_migration.py  add_password_reset_tracking.py  app.py  catcher.py  catcher.sh  catcher_weighted.py  cleanup.py  cleanup_selection_history.py  db.py  demo_validation.py  deploy.sh  docker-compose.yml  email_service.py  ical_sync.py  lefthook.yml  main.py  manage_tenants.py  manage_users.py  manage_vacations.py  migrate_channel_id.py  (+39 more)
.amazonq/rules/: python.md
.github/workflows/: docker.yml  pylint.yml  release.yml
docs/: DOCKER_DEPLOYMENT.md  DOCKER_SUMMARY.md  HTMX_IMPLEMENTATION.md  PASSWORD_RESET_GUIDE.md  TEAM_OVERVIEW_DELETE.md  VACATION_STATISTICS_FIX.md  WEBHOOK_GUIDE.md
templates/: add_vacation.html  base.html  change_password.html  index.html  login.html  my_vacations.html  reset_password.html  users.html  vacation_overview.html  vacations.html
tests/: test_catcher.py  test_channel_id.py  test_main_tenant_integration.py  test_manage_tenants.py  test_migration_tenants.py  test_selection_history_tenant.py  test_takeover.py  test_tenant_parameter.py  test_tenant_schema.py  test_tenant_user_filtering.py  test_user_matcher.py  test_vacation_sync.py  test_vacation_validation.py
(+4 files in other folders)
