[project]
name = "cotd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.1",
    "flask-login>=0.6.3",
    "flask-mail>=0.10.0",
    "holidays>=0.91",
    "icalendar>=7.0.2",
    "python-dotenv>=1.1.1",
    "rapidfuzz>=3.14.3",
    "requests>=2.32.5",
    "werkzeug>=3.1.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
]
