[project]
name = "cotd"
version = "0.1.0"
description = "Catcher of the Day - Slack-based daily catcher selection"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "holidays>=0.91",
    "icalendar>=7.0.2",
    "python-dotenv>=1.1.1",
    "rapidfuzz>=3.14.3",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
