[project]
name = "cotd"
version = "1.2.0"
description = "Catcher of the Day - Slack-based daily catcher selection"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "holidays>=0.91",
    "icalendar>=7.0.2",
    "python-dotenv>=1.1.1",
    "rapidfuzz>=3.14.3",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "flask>=3.1.3",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "ty>=0.0.55",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
